# rgb-driver

./: CMakeLists.txt
src/: main.c
